@@ -61,6 +61,18 @@ void gpu_compute_unit_free(struct gpu_compute_unit_t *compute_unit)
 }
 
 
+/* Advance one cycle in the compute unit by running every stage from last to first */
+void gpu_compute_unit_next_cycle(struct gpu_compute_unit_t *compute_unit)
+{
+	gpu_compute_unit_write(compute_unit);
+	gpu_compute_unit_execute(compute_unit);
+	gpu_compute_unit_read(compute_unit);
+	gpu_compute_unit_decode(compute_unit);
+	gpu_compute_unit_fetch(compute_unit);
+	gpu_compute_unit_schedule(compute_unit);
+}
+
+
 
 
 /*
@@ -110,10 +122,41 @@ void gpu_device_free(struct gpu_device_t *device)
 }
 
 
+void gpu_device_schedule_work_groups(struct gpu_device_t *device, struct gpu_ndrange_t *ndrange)
+{
+	struct gpu_work_group_t *work_group;
+	struct gpu_compute_unit_t *compute_unit;
+
+	while (device->idle_list_head && ndrange->pending_list_head) {
+		work_group = ndrange->pending_list_head;
+		compute_unit = device->idle_list_head;
+
+		/* Change work-group status to running, which implicitly removes it from
+		 * the 'pending' list, and inserts it to the 'running' list */
+		gpu_work_group_clear_status(work_group, gpu_work_group_pending);
+		gpu_work_group_set_status(work_group, gpu_work_group_running);
+		
+		/* Delete compute unit from 'idle' list and insert it to 'busy' list. */
+		DOUBLE_LINKED_LIST_REMOVE(device, idle, compute_unit);
+		DOUBLE_LINKED_LIST_INSERT_TAIL(device, busy, compute_unit);
+
+		/* Assign work-group to compute unit */
+		INIT_SCHEDULE.do_schedule = 1;
+		INIT_SCHEDULE.work_group_id = work_group->id;
+		INIT_SCHEDULE.wavefront_id = work_group->wavefront_id_first;
+		INIT_SCHEDULE.subwavefront_id = 0;
+
+		/* Debug */
+		gpu_pipeline_debug("cu action=\"run\", compute_unit=\"%d\", work_item=\"%d\"\n",
+			compute_unit->id, work_group->id);
+	}
+}
+
+
 void gpu_device_run(struct gpu_device_t *device, struct gpu_ndrange_t *ndrange)
 {
 	struct opencl_kernel_t *kernel = ndrange->kernel;
-	struct gpu_compute_unit_t *compute_unit;
+	struct gpu_compute_unit_t *compute_unit, *compute_unit_next;
 
 	/* Debug */
 	gpu_pipeline_debug("init global_size=%d, local_size=%d, group_count=%d, wavefront_size=%d, "
@@ -122,14 +165,25 @@ void gpu_device_run(struct gpu_device_t *device, struct gpu_ndrange_t *ndrange)
 		ndrange->wavefronts_per_work_group);
 
 	device->ndrange = ndrange;
-	compute_unit = device->compute_units[0];
-	INIT_SCHEDULE.do_schedule = 1;
-	INIT_SCHEDULE.work_group_id = 0;
-	INIT_SCHEDULE.wavefront_id = 0;
-	INIT_SCHEDULE.subwavefront_id = 0;
 
-	while (INIT_SCHEDULE.do_schedule) {
-		gpu_compute_unit_next_cycle(compute_unit);
+	for (;;) {
+		
+		/* Assign pending work-items to idle compute units.
+		 * Exit loop if all work-items were run. */
+		if (device->idle_list_head && ndrange->pending_list_head)
+			gpu_device_schedule_work_groups(device, ndrange);
+		if (!device->busy_list_head)
+			break;
+		
+		/* Advance one cycle on each busy compute unit */
+		for (compute_unit = device->busy_list_head; compute_unit; compute_unit = compute_unit_next) {
+			
+			/* Save next non-idle compute unit */
+			compute_unit_next = compute_unit->busy_next;
+
+			/* Simulate cycle in compute unit */
+			gpu_compute_unit_next_cycle(compute_unit);
+		}
 	}
 }
 
