@@ -1,0 +1,33 @@
+/*
+ *  Multi2Sim
+ *  Copyright (C) 2007  Rafael Ubal (ubal@gap.upv.es)
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307  USA
+ */
+
+#include <gpuarch.h>
+
+
+
+void gpu_compute_unit_fetch(struct gpu_compute_unit_t *compute_unit)
+{
+	/* Check if fetch stage is active */
+	if (!SCHEDULE_FETCH.do_fetch)
+		return;
+
+	/* By default, do not fetch next cycle */
+	SCHEDULE_FETCH.do_fetch = 0;
+}
+
